--- a/deployments/bases/artemis/ingress.yaml
+++ b/deployments/bases/artemis/ingress.yaml
@@ -1,4 +1,4 @@
-piVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: artemis
@@ -7,8 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: a80251b4396b9428d8898f2e34e92313-1929712141.eu-central-1.elb.amazonaws.com
-      http:
+    - http:
         paths:
           - path: /artemis(/|$)(.*)
             pathType: Prefix
