--- a/deployments/bases/postgres/deployment.yaml
+++ b/deployments/bases/postgres/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: artemis
+  name: postgres
 spec:
   replicas: 1
   template:
@@ -14,10 +14,3 @@ spec:
           envFrom:
             - secretRef:
                 name: postgres-credentials
-          volumeMounts:
-            - mountPath: /var/lib/artemis/etc-override/
-              name: broker-config-mount
-      volumes:
-        - name: broker-config-mount
-          configMap:
-            name: artemis-broker-config
