fixed credentials for postgres

--- a/deployments/bases/postgres/deployment.yaml
+++ b/deployments/bases/postgres/deployment.yaml
@@ -13,4 +13,4 @@ spec:
             - containerPort: 5432
           envFrom:
             - secretRef:
-                name: postgres-credentials
+                name: postgres-setup-credentials
