--- a/tekton/pipelines/java-build-push-commit.yaml
+++ b/tekton/pipelines/java-build-push-commit.yaml
@@ -1,12 +1,16 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: pipeline-with-parameters
+  name: java-build-push-commit
 spec:
   params:
     - name: code-repo-url
       type: string
+    - name: code-repo-revision
+      type: string
     - name: infra-repo-url
+      type: string
+    - name: infra-repo-revision
       type: string
   workspaces:
     - code
@@ -17,9 +21,9 @@ spec:
         name: git-clone
       params:
         - name: url
-          value: https://github.com/ConSol/super-simple-storage-solution.git
+          value: ${params.code-repo-url}
         - name: revision
-          value: main
+          value: ${params.code-repo-revision}
       workspaces:
         - name: output
           workspace: code
@@ -28,9 +32,9 @@ spec:
         name: git-clone
       params:
         - name: url
-          value: https://github.com/ConSol/s4-infra.git
+          value: ${params.params.infra-repo-url}
         - name: revision
-          value: main
+          value: ${params.infra-repo-revision}
       workspaces:
         - name: output
           workspace: infra
