--- a/deployments/bases/monitoring/prometheus/deployment.yaml
+++ b/deployments/bases/monitoring/prometheus/deployment.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: main
-          image: rom/prometheus@sha256:c833de2399020386dc1e886363467f60b7f8e404aef5eaa7a757d6968cf5147b
+          image: prom/prometheus@sha256:c833de2399020386dc1e886363467f60b7f8e404aef5eaa7a757d6968cf5147b
           volumeMounts:
             - mountPath: /etc/prometheus
               name: prometheus-config
