--- a/deployments/bases/postgres/deployment.yaml
+++ b/deployments/bases/postgres/deployment.yaml
@@ -14,3 +14,10 @@ spec:
           envFrom:
             - secretRef:
                 name: postgres-setup-credentials
+          volumeMounts:
+            - mountPath: /docker-entrypoint-initdb.d/
+              name: postgres-init-script
+      volumes:
+        - name: postgres-init-script
+          configMap:
+            - name: postgres-init-script
