--- a/deployments/bases/postgres/deployment.yaml
+++ b/deployments/bases/postgres/deployment.yaml
@@ -15,7 +15,7 @@ spec:
             - secretRef:
                 name: postgres-setup-credentials
           volumeMounts:
-            - mountPath: /docker-entrypoint-initdb.d/
+            - mountPath: /docker-entrypoint-initdb.d
               name: postgres-init-script
       volumes:
         - name: postgres-init-script
