--- a/deployments/bases/postgres/deployment.yaml
+++ b/deployments/bases/postgres/deployment.yaml
@@ -20,4 +20,4 @@ spec:
       volumes:
         - name: postgres-init-script
           configMap:
-            - name: postgres-init-script
+            name: postgres-init-script
