--- a/deployments/overlays/aggregator/kustomization.yaml
+++ b/deployments/overlays/aggregator/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
 components:
   - ../../components/patches/configs/artemis
   - ../../components/patches/configs/postgres
+  - ../../components/patches/configs/tracing
+  - ../../components/patches/configs/logging
 
 patchesStrategicMerge:
   - generated-image-patch.yaml
