--- a/deployments/components/patches/configs/logging/patch.yml
+++ b/deployments/components/patches/configs/logging/patch.yml
@@ -11,4 +11,4 @@ spec:
             - name: GELF_HOST
               value: logstash
             - name: GELF_PORT
-              value: 12201
+              value: '12201'
