--- a/deployments/overlays/aggregator/kustomization.yaml
+++ b/deployments/overlays/aggregator/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../bases/quarkus-app
+  - ../../bases/app
 
 components:
   - ../../components/patches/configs/artemis
@@ -18,3 +18,6 @@ namePrefix: aggregator-
 commonLabels:
   app.kubernetes.io/name: aggregator
   app.kubernetes.io/version: '1.0'
+  app.kubernetes.io/component: s4
+  app.kubernetes.io/managed-by: ArgoCD
+  app.kubernetes.io/created-by: ArgoCD
