added deployment for continuous tests

--- a/deployments/overlays/continuous-test/kustomization.yaml
+++ b/deployments/overlays/continuous-test/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 resources:
   - deployment.yaml
 
+patchesStrategicMerge:
+  - generated-image-patch.yaml
+
 namePrefix: continuous-test-
 
 commonLabels:
