--- a/deployments/overlays/continuous-test/deployment.yaml
+++ b/deployments/overlays/continuous-test/deployment.yaml
@@ -13,3 +13,10 @@ spec:
           env:
             - name: SUT_URL
               value: http://rest-api
+          command:
+            - "--engine"
+            - "testng"
+            - "--test"
+            - "de.consol.dus.s4.citrus.tests.continuous.UploadIT"
+            - "--duration"
+            - "2147483647"
