--- a/deployments/overlays/continuous-test/deployment.yaml
+++ b/deployments/overlays/continuous-test/deployment.yaml
@@ -14,6 +14,9 @@ spec:
             - configMapRef:
                 name: citrus-config
           command:
+            - "java"
+            - "-jar"
+            - "app.jar"
             - "--engine"
             - "testng"
             - "--test"
