--- a/deployments/overlays/continuous-test/kustomization.yaml
+++ b/deployments/overlays/continuous-test/kustomization.yaml
@@ -6,8 +6,11 @@ resources:
 
 configMapGenerator:
   - name: citrus-config
-    files:
+    envs:
       - citrus-config.env
+
+generatorOptions:
+  disableNameSuffixHash: true
 
 patchesStrategicMerge:
   - generated-image-patch.yaml
