--- a/deployments/bases/elk/logstash/deployment.yaml
+++ b/deployments/bases/elk/logstash/deployment.yaml
@@ -20,4 +20,4 @@ spec:
       volumes:
         - name: logstash-config
           configMap:
-            name: logstash-config
+            name: logstash-gelf-config
