--- a/deployments/components/patches/configs/logging/kustomization.yaml
+++ b/deployments/components/patches/configs/logging/kustomization.yaml
@@ -1,5 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
-patchesStrategicMerge:
-  - patch.yml
+patchesJson6902:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: app
+    path: patch.yaml
