--- a/deployments/bases/monitoring/prometheus/prometheus.yml
+++ b/deployments/bases/monitoring/prometheus/prometheus.yml
@@ -12,4 +12,4 @@ scrape_configs:
     metrics_path: '/q/metrics'
 
     static_configs:
-      - targets: ['rest-api', 'aggregator']
+      - targets: ['rest-api-app', 'aggregator-app']
