--- a/deployments/overlays/aggregator/kustomization.yaml
+++ b/deployments/overlays/aggregator/kustomization.yaml
@@ -13,6 +13,14 @@ components:
 patchesStrategicMerge:
   - generated-image-patch.yaml
 
+patchesJson6902:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: app
+    path: patch.yaml
+
 namePrefix: aggregator-
 
 commonLabels:
