--- a/deployments/overlays/continuous-test/kustomization.yaml
+++ b/deployments/overlays/continuous-test/kustomization.yaml
@@ -15,6 +15,14 @@ generatorOptions:
 patchesStrategicMerge:
   - generated-image-patch.yaml
 
+patchesJson6902:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: app
+    path: patch.yaml
+
 namePrefix: continuous-test-
 
 commonLabels:
