--- a/deployments/bases/elk/kibana/deployment.yaml
+++ b/deployments/bases/elk/kibana/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     spec:
       containers:
-        - name: main
+        - name: kibana
           image: docker.elastic.co/kibana/kibana-oss:7.10.2
           ports:
             - containerPort: 5601
