--- a/deployments/bases/elk/elastic/deployment.yaml
+++ b/deployments/bases/elk/elastic/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     spec:
       containers:
-        - name: main
+        - name: elasticsearch
           image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
           ports:
             - containerPort: 9200
