--- a/deployments/bases/elk/logstash/deployment.yaml
+++ b/deployments/bases/elk/logstash/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     spec:
       containers:
-        - name: main
+        - name: logstash
           image: docker.elastic.co/logstash/logstash-oss:7.10.2
           ports:
             - containerPort: 12201
