added app label from metadata field

--- a/deployments/bases/app/deployment.yaml
+++ b/deployments/bases/app/deployment.yaml
@@ -17,4 +17,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: APP_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.labels.app.kubernetes.io/name
           envFrom: []
