--- a/deployments/overlays/rest-api/kustomization.yaml
+++ b/deployments/overlays/rest-api/kustomization.yaml
@@ -24,7 +24,7 @@ patchesJson6902:
 namePrefix: rest-api-
 
 commonLabels:
-  app.kubernetes.io/name: rest-api
+  app.kubernetes.io/name: rest-api-app
   app.kubernetes.io/version: '1.0'
   app.kubernetes.io/component: s4
   app.kubernetes.io/managed-by: ArgoCD
