--- a/deployments/overlays/aggregator/patch.yaml
+++ b/deployments/overlays/aggregator/patch.yaml
@@ -1,3 +1,8 @@
 - op: replace
   path: "/spec/template/spec/containers/0/name"
   value: aggregator
+- op: add
+  path: "/spec/template/spec/containers/0/env/-"
+  value:
+    name: APP_NAME
+    value: aggregator-app
