--- a/deployments/overlays/rest-api/patch.yaml
+++ b/deployments/overlays/rest-api/patch.yaml
@@ -1,3 +1,8 @@
 - op: replace
   path: "/spec/template/spec/containers/0/name"
   value: rest-api
+- op: add
+  path: "/spec/template/spec/containers/0/env/-"
+  value:
+    name: APP_NAME
+    value: rest-api-app
