--- a/deployments/overlays/aggregator/kustomization.yaml
+++ b/deployments/overlays/aggregator/kustomization.yaml
@@ -12,14 +12,7 @@ components:
 
 patchesStrategicMerge:
   - generated-image-patch.yaml
-
-patchesJson6902:
-  - target:
-      group: apps
-      version: v1
-      kind: Deployment
-      name: app
-    path: patch.yaml
+  - environment-patch.yaml
 
 namePrefix: aggregator-
 
