--- a/deployments/overlays/aggregator/kustomization.yaml
+++ b/deployments/overlays/aggregator/kustomization.yaml
@@ -14,6 +14,14 @@ patchesStrategicMerge:
   - generated-image-patch.yaml
   - environment-patch.yaml
 
+patchesJson6902:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: app
+    path: patch-container-name.yaml
+
 namePrefix: aggregator-
 
 commonLabels:
