--- a/deployments/bases/artemis/service.yaml
+++ b/deployments/bases/artemis/service.yaml
@@ -11,7 +11,7 @@ spec:
     - name: amqp
       protocol: TCP
       port: 5672
-    - name: jxm_rmi
+    - name: jxm-rmi
       port: 1198
     - name: jmx
       protocol: TCP
