--- a/deployments/components/patches/configs/instana-tracing/patch.yaml
+++ b/deployments/components/patches/configs/instana-tracing/patch.yaml
@@ -2,4 +2,4 @@
   path: "/spec/template/spec/containers/0/envFrom/-"
   value:
     configMapRef:
-      name: tracing-config
+      name: instana-tracing-config
