--- a/deployments/overlays/rest-api/kustomization.yaml
+++ b/deployments/overlays/rest-api/kustomization.yaml
@@ -9,6 +9,7 @@ components:
   - ../../components/patches/configs/postgres
   - ../../components/patches/configs/instana-tracing
   - ../../components/patches/configs/logging
+  - ../../components/pod/health/quarkus
 
 patchesStrategicMerge:
   - generated-image-patch.yaml
