set log level of instana to DEBUG

--- a/deployments/bases/instana/configuration.yaml
+++ b/deployments/bases/instana/configuration.yaml
@@ -47,3 +47,4 @@ com.instana.plugin.postgresql:
   database: ''
 com.instana.plugin.opentelemetry:
   enabled: true
+log4j2.logger.instana.level: DEBUG
