--- a/deployments/overlays/rest-api/generated-image-patch.yaml
+++ b/deployments/overlays/rest-api/generated-image-patch.yaml
@@ -8,4 +8,4 @@ spec:
     spec:
       containers:
         - name: main
-          image: public.ecr.aws/j6e0o7d4/s4/rest-api:1498df7
+          image: public.ecr.aws/j6e0o7d4/s4/rest-api:ubi-529ae48
