--- a/tekton/pipelines/java-build-push-commit.yaml
+++ b/tekton/pipelines/java-build-push-commit.yaml
@@ -4,14 +4,10 @@ metadata:
   name: java-build-push-commit
 spec:
   params:
-    - name: code-repo-url
-      type: string
-    - name: code-repo-revision
-      type: string
-    - name: infra-repo-url
-      type: string
-    - name: infra-repo-revision
-      type: string
+    - name: code-repo
+      type: git
+    - name: infra-repo
+      type: git
   workspaces:
     - code
     - infra
@@ -21,9 +17,9 @@ spec:
         name: git-clone
       params:
         - name: url
-          value: ${params.code-repo-url}
+          value: ${params.code-repo.url}
         - name: revision
-          value: ${params.code-repo-revision}
+          value: ${params.code-repo.revision}
       workspaces:
         - name: output
           workspace: code
@@ -32,9 +28,9 @@ spec:
         name: git-clone
       params:
         - name: url
-          value: ${params.params.infra-repo-url}
+          value: ${params.infra-repo.url}
         - name: revision
-          value: ${params.infra-repo-revision}
+          value: ${params.infra-repo.revision}
       workspaces:
         - name: output
           workspace: infra
