--- a/tekton/triggerTemplates/github/rbac.yaml
+++ b/tekton/triggerTemplates/github/rbac.yaml
@@ -22,7 +22,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: tekton-triggers-sa
-    namespace: getting-started
+    namespace: s4-pipelines
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -35,7 +35,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: tekton-triggers-sa
-    namespace: getting-started
+    namespace: s4-pipelines
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -45,7 +45,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tekton-triggers-createwebhook
-  namespace: getting-started
+  namespace: s4-pipelines
 rules:
   - apiGroups:
       - ""
@@ -82,17 +82,17 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tekton-triggers-createwebhook
-  namespace: getting-started
+  namespace: s4-pipelines
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: tekton-triggers-createwebhook
-  namespace: getting-started
+  namespace: s4-pipelines
 subjects:
   - kind: ServiceAccount
     name: tekton-triggers-createwebhook
-    namespace: getting-started
+    namespace: s4-pipelines
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
