adds missing config key for instana artemis config

--- a/deployments/bases/instana/configuration.yaml
+++ b/deployments/bases/instana/configuration.yaml
@@ -31,9 +31,10 @@
 #  enabled: true # disabled by default
 #  availability-zone: 'zone'
 com.instana.plugin.activemqartemis:
-  - 'upload-ready-for-processing::aggregator'
-  - 'aggregator'
-  - 'upload-ready-for-processing'
+  monitorQueues:
+    - 'upload-ready-for-processing::aggregator'
+    - 'aggregator'
+    - 'upload-ready-for-processing'
 com.instana.plugin.prometheus:
   # Global (all) endpoints username/password configuration (optional)
   username: ''
