--- a/tekton/catalog/tasks/kustomization.yaml
+++ b/tekton/catalog/tasks/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 resources:
-- https://raw.githubusercontent.com/tektoncd/catalog/main/task/git-clone/0.5/git-clone.yaml
+- bash.yaml
+- git-clone.yaml
+- kaniko.yaml
 - https://raw.githubusercontent.com/tektoncd/catalog/main/task/maven/0.2/maven.yaml
-- https://raw.githubusercontent.com/tektoncd/catalog/main/task/kaniko/0.6/kaniko.yaml
+- https://raw.githubusercontent.com/tektoncd/catalog/main/task/git-cli/0.3/git-cli.yaml
