--- a/tekton/triggerTemplates/github/trigger-template.yaml
+++ b/tekton/triggerTemplates/github/trigger-template.yaml
@@ -2,7 +2,6 @@ apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 metadata:
   name: s4-triggertemplate
-  namespace: s4-pipelines
 spec:
   params:
     - name: git-repository-revision
@@ -10,14 +9,11 @@ spec:
       default: master
     - name: git-repository-url
       description: The git repository url
-    - name: namespace
-      description: The namespace to create the resources
   resourcetemplates:
     - apiVersion: tekton.dev/v1beta1
       kind: PipelineRun
       metadata:
         generateName: github-
-        namespace: s4-pipelines
       spec:
         serviceAccountName: tekton-triggers-sa
         pipelineRef:
@@ -48,6 +44,9 @@ spec:
                 resources:
                   requests:
                     storage: 1Gi
+          - name: git-credentials
+            secret:
+              secretName: github-credentials
           - name: maven-settings
             emptyDir: {}
 ---
@@ -55,7 +54,6 @@ apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: s4-pipelinebinding
-  namespace: s4-pipelines
 spec:
   params:
     - name: git-repository-url
@@ -67,7 +65,6 @@ apiVersion: triggers.tekton.dev/v1alpha1
 kind: EventListener
 metadata:
   name: s4-listener
-  namespace: s4-pipelines
 spec:
   serviceAccountName: tekton-triggers-sa
   triggers:
