--- a/tekton/triggerTemplates/github/trigger-template.yaml
+++ b/tekton/triggerTemplates/github/trigger-template.yaml
@@ -47,8 +47,14 @@ spec:
           - name: git-credentials
             secret:
               secretName: github-credentials
-          - name: maven-settings
-            emptyDir: {}
+          - name: maven-settings-and-cache
+            volumeClaimTemplate:
+              spec:
+                accessModes:
+                  - ReadWriteOnce
+                resources:
+                  requests:
+                    storage: 1Gi
 ---
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
