--- a/tekton/triggerTemplates/github/rbac.yaml
+++ b/tekton/triggerTemplates/github/rbac.yaml
@@ -22,6 +22,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: tekton-triggers-sa
+    namespace: s4-pipelines
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -34,6 +35,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: tekton-triggers-sa
+    namespace: s4-pipelines
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
