--- a/tekton/triggerTemplates/github/trigger-template.yaml
+++ b/tekton/triggerTemplates/github/trigger-template.yaml
@@ -63,7 +63,7 @@ metadata:
 spec:
   params:
     - name: git-repository-url
-      value: $(body.repository.clone_url)
+      value: $(body.repository.html_url)
     - name: git-repository-revision
       value: $(body.head_commit.id)
 ---
