fixed extraction of commit id

--- a/tekton/triggerTemplates/github/trigger-template.yaml
+++ b/tekton/triggerTemplates/github/trigger-template.yaml
@@ -65,7 +65,7 @@ spec:
     - name: git-repository-url
       value: $(body.repository.html_url)
     - name: git-repository-revision
-      value: $(body.head_commit.id)
+      value: $(body.commit_id)
 ---
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: EventListener
