--- a/tekton/triggerTemplates/github/trigger-template.yaml
+++ b/tekton/triggerTemplates/github/trigger-template.yaml
@@ -65,7 +65,7 @@ spec:
     - name: git-repository-url
       value: $(body.repository.html_url)
     - name: git-repository-revision
-      value: $(body.commit_id)
+      value: $(body.head_commit.id)
 ---
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: EventListener
@@ -74,7 +74,15 @@ metadata:
 spec:
   serviceAccountName: tekton-triggers-sa
   triggers:
-    - bindings:
+    - interceptors:
+        - ref:
+            name: "github"
+            kind: ClusterInterceptor
+            apiVersion: triggers.tekton.dev
+          params:
+            - name: "eventTypes"
+              value: [ "push" ]
+      bindings:
         - ref: s4-pipelinebinding
       template:
         ref: s4-triggertemplate
