--- a/deployments/bases/instana/configuration.yaml
+++ b/deployments/bases/instana/configuration.yaml
@@ -46,3 +46,5 @@ com.instana.plugin.postgresql:
   user: 'postgres'
   password: 'postgres'
   database: ''
+com.instana.plugin.opentelemetry:
+  enabled: true
