--- a/deployments/components/patches/configs/logging/patch.yaml
+++ b/deployments/components/patches/configs/logging/patch.yaml
@@ -3,3 +3,8 @@
   value:
     configMapRef:
       name: gelf-config
+- op: add
+  path: "/spec/template/spec/containers/0/env/-"
+  value:
+    name: CONSOLE_LOG_JSON
+    value: 'true'
