--- a/deployments/bases/instana/configuration.yaml
+++ b/deployments/bases/instana/configuration.yaml
@@ -48,3 +48,6 @@ com.instana.plugin.postgresql:
   database: ''
 com.instana.plugin.opentelemetry:
   enabled: true
+com.instana.tracing:
+  extra-http-headers:
+    - 'X-Correlation-ID'
