--- a/deployments/bases/elk/filebeat/kustomization.yaml
+++ b/deployments/bases/elk/filebeat/kustomization.yaml
@@ -2,16 +2,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deployment.yaml
-  - service.yaml
+  - rbac.yaml
+  - daemonSet.yaml
 
 configMapGenerator:
-  - name: logstash-config
+  - name: filebeat-config
     files:
-      - logstash.conf
+      - filebeat.yml
 
 generatorOptions:
   disableNameSuffixHash: true
 
 commonLabels:
-  app.kubernetes.io/name: logstash
+  app.kubernetes.io/name: filebeat
