--- a/deployments/bases/jaeger/kustomization.yaml
+++ b/deployments/bases/jaeger/kustomization.yaml
@@ -9,7 +9,7 @@ configMapGenerator:
   - name: tracing-config
     literals:
       - TRACING_ENABLED=true
-      - TRACING_ENDPOINT=http://jaeger:14268/api/traces
+      - TRACING_ENDPOINT=http://jaeger.jaeger-tracing.svc:14268/api/traces
 
 generatorOptions:
   disableNameSuffixHash: true
